css fix fixed in the display that the autor don't overlap with the title

--- a/css/customstyle.css
+++ b/css/customstyle.css
@@ -139,7 +139,6 @@ body {
     line-height: 90%;
     margin-left: -5px;
     margin-right: -34%;
-    margin-bottom: -5%;
     font-size: 105%;
     max-height: 100%;
 }
